--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-plus": "1.0.2-beta.52",
+    "jsencrypt": "^3.2.1",
+    "lodash": "^4.17.21",
     "screenfull": "^5.1.0",
     "vue": "^3.1.2",
     "vue-cropperjs": "^5.0.0",
