--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "electron-to-chromium": "^1.4.11",
     "element-plus": "1.0.2-beta.52",
     "jsencrypt": "^3.2.1",
     "lodash": "^4.17.21",
